:sparkles: added boilerplate grpc code for latestfinalizedblockhandler
